# apple-health-dash

./: .gitignore  Cargo.toml  Procfile  README.md  console_server.py  justfile  openapi.json  pyproject.toml
.zellij/: dev.kdl
console/: .gitignore  .oxfmtrc.json  .oxlintrc.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
console/.husky/: pre-commit
console/app/: main.tsx  msw-mock-api.ts  routes.tsx
console/app/api/: index.ts
console/app/api/__generated__/: Api.ts  msw-handlers.ts  validate.ts
console/app/components/: ErrorBoundary.tsx  Sidebar.tsx
console/app/hooks/: use-is-active-path.ts
console/app/layouts/: AppLayout.tsx
console/app/pages/: AboutPage.tsx  HomePage.tsx
console/app/styles/: index.css
console/test/unit/: setup.ts
crates/ahealth-api/: Cargo.toml  config.toml.example  openapi.json
crates/ahealth-api/src/: config.rs  main.rs
crates/ahealth-ingest/: Cargo.toml
crates/ahealth-ingest/src/: main.rs
