[project]
name = "ahealth-console-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<1",
    "starlette>=0.46,<1",
    "uvicorn>=0.34,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["console_server.py"]

[tool.hatch.build.targets.sdist]
include = ["console_server.py", "pyproject.toml"]
