[package]
name = "ahealth-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
# workspace-managed
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# crate-specific
rumqttc = "0.24"
clickhouse = { version = "0.13", features = ["time"] }
chrono = "0.4"
time = "0.3"
